assets/css/style.css
:root {
    --font-body: 'Montserrat', 'sans-serif';
    --color-gold: #ffd700;
    --color-dark-grey: #464646;
    --color-light-grey2: #a7a9aa;
    --color-light-grey: #f8f9fa;
    --color-black: #000;
    --color-white: #fff;
    --color: #0000002d;


}

body {
    font-family: var(--font-body);

}

h1,
h2,
h3,
h4 {
    font-weight: bold;
}

.text-gold {
    color: var(--color-gold);
}

.text-black {
    color: var(--color-black);
}

.text-li-grey {
    color: var(--color-light-grey2);
}

.bg-black {
    background-color: var(--color-black);
}

.bg-grey {
    background-color: var(--color-light-grey);
}

.bg-grey-2{
    background-color: var(--color-light-grey2);
}

.bg-white {
    background-color: var(--color-white);
}

.height-50 {
    height: 50vh;
}

.text-500 {
    font-size: 10vh;
}

.logo-img {
    max-height: 7vh;
}

.align-center {
    align-self: center;
}

.navbar-toggler {
    box-shadow: none;

}

#btn-navbar {
    box-shadow: none;
}

.nav-link {
    font-weight: 600;
}

.nav-link:hover {
    color: var(--color-gold);
}


.message-h {
    height: 15vh;
}

.maps-style {
    width: 80%;
    height: 450px;
    border: 0;
}

.iframe-style {
    width: 27vw;
    min-width: 300px;
    height: 29vh;
}

.Solar-energy ,.Electric-engineering{
    border-radius: 5px;
    background-position: center;  
    height: 50vh;
}
.Solar-energy{
    background-image: linear-gradient(to right, rgba(0,0,0, 0.5), rgba(0,0,0, 0.5)), url(../img/png-jpeg/4334.jpg);
    
}
.Electric-engineering{   
    background-image: linear-gradient(to right, rgba(0,0,0, 0.5), rgba(0,0,0, 0.5)), url(../img/png-jpeg/2940.jpg);  
}

